# AIIS-PMMS

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  PLAN.md  PLAN.zh-CN.md  README.md  README.zh-CN.md
backend/: .dockerignore  .env.backend.docker.example  .env.docker.example  .env.example  .env.mssql.example  BUILD.md  BUILD.zh-CN.md  Dockerfile  README.md  README.zh-CN.md  build.py  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.mssql.yml  main.py  pyproject.toml  run.py  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_auth_tables.py  0002_create_material_inventory_tables.py  0003_create_cutting_preparation_tables.py  0004_add_inventory_code.py  0005_add_inventory_template_fields.py  0006_inventory_spec_import.py  0007_use_unicode_text_columns.py  0008_use_unicode_username.py
backend/app/: router.py
backend/app/admin/schemas/: database_maintenance.py
backend/app/admin/services/: database_maintenance_service.py
backend/app/cutting/cruds/: preparation_crud.py
backend/app/cutting/models/: __init__.py  preparation.py
backend/common/: error_codes.py  exceptions.py  log.py  pagination.py  response.py  schema_base.py
backend/core/: deps.py  jwt.py  security.py
backend/database/: session.py  url_builder.py
backend/scripts/: ensure_database.py  reset_root_password.py
backend/tests/: conftest.py  test_logging.py  test_p0_cors.py  test_p0_p1_contract.py  test_p2_material_inventory.py  test_p3_database_maintenance.py  test_p4_preparation_template_export.py  test_p5_user_management.py
docs/: 00-overview.zh-CN.md  (+8 more)
(+34 files in other folders)
